--- a/public/index.html
+++ b/public/index.html
@@ -81,15 +81,18 @@
                         </div>
                     </div>
                 </div>
-
                 <form id="form-response-form">
-                    <div id="form-fields-container">
+                    <div id="form-fields-container" class="form-fields-container">
                         <!-- Form fields will be added here dynamically -->
                     </div>
 
                     <div class="actions">
-                        <button type="button" class="btn" id="back-to-home">Back to Home</button>
-                        <button type="submit" class="btn primary">Submit</button>
+                        <button type="button" class="btn secondary" id="back-to-home">
+                            <i class="fas fa-arrow-left"></i> Back to Home
+                        </button>
+                        <button type="submit" class="btn primary">
+                            <i class="fas fa-paper-plane"></i> Submit
+                        </button>
                     </div>
                 </form>
             </div>
@@ -131,15 +134,42 @@
                 </div>
             </div>
             <div class="form-actions">
-                <button class="btn secondary edit-form">Edit</button>
-                <button class="btn primary fill-form">Fill</button>
+                <button class="btn view-form" title="View Details">
+                    <i class="fas fa-eye"></i> View
+                </button>
+                <button class="btn secondary edit-form">
+                    <i class="fas fa-edit"></i> Edit
+                </button>
+                <button class="btn primary fill-form">
+                    <i class="fas fa-pen"></i> Fill
+                </button>
+                <button class="btn danger delete-form" style="display: none;">
+                    <i class="fas fa-trash-alt"></i> Delete
+                </button>
             </div>
         </li>
     </template>
 
+    <!-- Delete confirmation modal -->
+    <div id="deleteModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="modal-header">
+                <h3><i class="fas fa-exclamation-triangle"></i> Confirm Delete</h3>
+            </div>
+            <p>Are you sure you want to delete this form? This action cannot be undone.</p>
+            <p><strong>Form: </strong><span id="deleteFormTitle"></span></p>
+            <div class="modal-actions">
+                <button id="cancelDelete" class="btn secondary">Cancel</button>
+                <button id="confirmDelete" class="btn danger">Delete</button>
+            </div>
+        </div>
+    </div> <!-- Load scripts in the correct order -->
+    <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
     <script src="js/form-builder.js"></script>
-    <script src="js/form-filler.js"></script>
+    <script src="js/form-filler-enhanced.js"></script>
+    <script src="js/script-init.js"></script>
 </body>
 
 </html>
