--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <h1>🚀 Collaborative Forms</h1>
+                <h1>Collaborative Forms</h1>
                 <h2>Welcome Back</h2>
                 <p>Please sign in to your account</p>
             </div>
@@ -38,11 +38,11 @@
             <div class="demo-accounts">
                 <h3>Demo Accounts</h3>
                 <div class="demo-account" onclick="quickLogin('admin@example.com', 'admin123')">
-                    <strong>👑 Admin Account</strong>
+                    <strong>Admin Account</strong>
                     <small>admin@example.com / admin123</small>
                 </div>
                 <div class="demo-account" onclick="quickLogin('john@example.com', 'password123')">
-                    <strong>👤 User Account</strong>
+                    <strong>User Account</strong>
                     <small>john@example.com / password123</small>
                 </div>
             </div>
