--- a/public/signup.html
+++ b/public/signup.html
@@ -12,7 +12,7 @@
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <h1>🚀 Collaborative Forms</h1>
+                <h1>Collaborative Forms</h1>
                 <h2>Create Account</h2>
                 <p>Join our collaborative form system</p>
             </div>
