Deleted overlapping files

--- a/public/form-details.html
+++ b/public/form-details.html
@@ -58,12 +58,8 @@
                     <div class="btn-group">
                         <button id="edit-form-btn" class="btn secondary">
                             <i class="fas fa-edit"></i> Edit Form
-                        </button>
-                        <button id="delete-form-btn" class="btn danger">
+                        </button> <button id="delete-form-btn" class="btn danger">
                             <i class="fas fa-trash-alt"></i> Delete Form
-                        </button>
-                        <button id="open-prisma-btn" class="btn">
-                            <i class="fas fa-database"></i> Database View
                         </button>
                     </div>
                 </div>
