--- a/client/form-details.html
+++ b/client/form-details.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </div>
-
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/form-details.js"></script>
 </body>
